# RAG_Project

./: .gitignore  pyproject.toml  requirements.txt
DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
Embeddings/: embedding.ipynb  openaiembeddings.ipynb
Summaries/DataIngestParsing/: 1-dataingestion.ipynb.summary.json  2-dataparsingpdf.ipynb.summary.json  3-dataparsingdoc.ipynb.summary.json  4-csvexcelparsing.ipynb.summary.json  5-jsonparsing.ipynb.summary.json  6-databaseparsing.ipynb.summary.json
Summary_Script/: Summary.py
Vector_Store/: 1-chromadb.ipynb  Visualise_Chroma_DB.py
